Correct spacing and styling of layout.erb.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@ body {
   background: url('/img/Hexagon-2.jpg');
   background-size: cover;
   background-position: center;
-  /*background-repeat: no-repeat;*/
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   color: #333;
 }
 
